--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,17 @@
 server {
         listen 80 default_server;
         listen [::]:80 ipv6only=on default_server;
-        server_name sjlee.me blog.sjlee.me;
-        # access_log /var/log/nginx/blog.access_log main;
-        # error_log /var/log/nginx/blog.error_log info;
-        return 301 https://sjlee.me;
+        server_name sjlee.me; 
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
+        return 301 https://sjlee.me$request_uri;
 }
-
+server {
+        listen 80;
+        listen [::]:80;
+        server_name investornexus.sjlee.me;
+        return 301 https://sjlee.me/investornexus$request_uri;
+}
 server {
         listen 443 default_server;
         listen [::]:443 ipv6only=on default_server;
@@ -22,26 +27,26 @@ server {
         ssl_prefer_server_ciphers on;
         ssl_dhparam /usr/share/sslmate/dhparams/dh2048-group14.pem;
 
-        ssl_session_timeout 5m;
-        ssl_session_cache shared:SSL:5m;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 
         # Enable this if you want HSTS (recommended)
-        add_header Strict-Transport-Security max-age=15768000;
+        add_header Strict-Transport-Security max-age=31536000;
+        add_header X-Frame-Options DENY;
 
-        # add_header X-Frame-Options DENY;
-
-        # access_log /var/log/nginx/blog.secure.access_log main;
-        # error_log /var/log/nginx/blog.secure.error_log info;
-
-        client_max_body_size 4m;
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;     
 
         location / {
-                proxy_pass              http://seungjulee.github.io;
+                proxy_pass              https://seungjulee.github.io;
                 proxy_redirect          default;
                 proxy_buffering         off;
                 proxy_set_header        Host                    $host;
                 proxy_set_header        X-Real-IP               $remote_addr;
                 proxy_set_header        X-Forwarded-For         $proxy_add_x_forwarded_for;
                 proxy_set_header        X-Forwarded-Protocol    $scheme;
+        }
+        location /investornexus {
+                rewrite ^(.*) http://investornexus.herokuapp.com permanent;
         }
 }
